tests/bad/methods_invalid_struct.ae
/// fail: Struct for method does not exist

def Foo::bar() {}